--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
 install:
-  - make deps
-script:    
-  - make test
+   - make deps
+script
+   - make lint
+   - make test
