--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
+serices:
+   - docker
 install:
    - make deps
 script:
    - make lint
    - make test
+after_success:
+   - make docker_build
