--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ script:
    - make test
    - make docker_build
    - make docker_push
+deploy:
+   - provider: heroku
+   - app: stormy-atoll-41045
+   - api_key: ${HEROKU_API_KEY}
