--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
    - make docker_build
    - make docker_push
 deploy:
-   - provider: heroku
-   - app: stormy-atoll-41045
-   - api_key: ${HEROKU_API_KEY}
+   provider: heroku
+   app: stormy-atoll-41045
+   api_key: ${HEROKU_API_KEY}
